tests/NormalTests/paczka1/fuzzy1/57542866.err
Error in line 1: ijiQSnZ S381 69,94
Error in line 8: S381 S381 55,9
Error in line 10: S381 S882 33,5
Error in line 7: 4HBRDXS S21 31,3
Error in line 18: 4HBRDXS A322 53,5
Error in line 22: E6kAf3pUIj S21 8,1
Error in line 23: 4HBRDXS S882 23,9
Error in line 37: 4HBRDXS A322 -1,7
Error in line 19: P1k S21 72,1
